--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,16 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "pfe_server"}]
+# packages = [{include = "pfe_server"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 tensorflow = "^2.16.1"
 keras = "^3.3.3"
 gensim = "^4.3.2"
+scipy = "1.10"
 
 
 [build-system]
