--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -56,14 +56,16 @@ ENV PATH $PATH:$JAVA_HOME/bin
 # copy over compiled Java
 WORKDIR /preprocess_project
 COPY --from=jre_build /java_code/build/install/preprocess_project /preprocess_project/
+ENV PATH $PATH:/preprocess_project/bin
 
 # install python requirements (using the requirements.txt made in earlier stage)
-WORKDIR /train_model
-COPY --from=python_requirements /poetry_project/requirements.txt /train_model/
-RUN pip install --no-cache-dir -r /train_model/requirements.txt
+WORKDIR /app
+COPY --from=python_requirements /poetry_project/requirements.txt /app/
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # copy python script and R script
-COPY ./training .
+COPY . /app 
+# TODO - limit copying to needed files only
 
 
 
