--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,11 @@ scikit-learn = "^1.5.0"
 tensorflow = "^2.16.1"
 keras = "^3.3.3"
 gensim = "^4.3.2"
-scipy = "1.10"
+scipy = "1.10.1"
+fastapi = "^0.111.0"
+uvicorn = "^0.30.1" 
+pydantic = "^2.7.4" 
+gitpython = "^3.1.43"
 
 
 [build-system]
