--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,10 @@ fastapi = "^0.111.0"
 uvicorn = "^0.30.1" 
 pydantic = "^2.7.4" 
 gitpython = "^3.1.43"
-
+pytest = "^8.2.2"
+httpx = "^0.27.0"
+pytest-mock = "^3.14.0"
+pytest-asyncio = "*"
 
 [build-system]
 requires = ["poetry-core"]
