--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = ">=3.10,<3.12"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
+tensorflow-io-gcs-filesystem = "0.31.0"
 tensorflow = "^2.16.1"
 keras = "^3.3.3"
 gensim = "^4.3.2"
