--- a/service/service_ai_analysis/Dockerfile
+++ b/service/service_ai_analysis/Dockerfile
@@ -1,6 +1,6 @@
 # =================================================================================================================
 # build from ./backend folder
-# STAGE: build JRE, build java, version >11 
+# STAGE: build JRE, build java, version >11
 FROM eclipse-temurin:21 as jre_build
 
 # Create a custom Java runtime
@@ -16,25 +16,25 @@ RUN $JAVA_HOME/bin/jlink \
 # TODO - Is this really necessary? can't we just build locally and copy the executable into the docker? java is supposed to be compile once run anywhere
 # build java thing
 WORKDIR /java_code
-COPY ./preprocess_project /java_code 
+COPY ./preprocess_project /java_code
 RUN /java_code/gradlew installDist --no-daemon
 
 # =================================================================================================================
 
-# STAGE: get python requirements.txt 
+# STAGE: get python requirements.txt
 FROM python:3.11-slim AS python_requirements
 
 # install poetry
 RUN pip install poetry
 WORKDIR /poetry_project
 #COPY ./poetry.lock /poetry_project/
-COPY ./pyproject.toml /poetry_project/
+COPY ../pyproject.toml /poetry_project/
 RUN poetry lock
 RUN poetry export -f requirements.txt --output /poetry_project/requirements.txt
 
 # =================================================================================================================
 
-# STAGE: install R on a Java on base python image 
+# STAGE: install R on a Java on base python image
 # make this 3.11-slim in the future
 FROM python:3.11
 
@@ -42,12 +42,6 @@ FROM python:3.11
 WORKDIR /app
 COPY --from=python_requirements /poetry_project/requirements.txt /app/
 RUN pip install --no-cache-dir -r /app/requirements.txt
-
-# Install R
-WORKDIR /r_install
-COPY ./install_R.sh /r_install
-RUN chmod a+x /r_install/install_R.sh
-RUN /r_install/install_R.sh
 
 # copy over JRE
 WORKDIR /javaruntime
@@ -63,14 +57,10 @@ COPY --from=jre_build /java_code/build/install/preprocess_project /preprocess_pr
 ENV PATH $PATH:/preprocess_project/bin
 
 # copy python script and R script
-COPY . /app 
-# TODO - limit copying to needed files only
-
-# RUN python3 -m uvicorn services/model_generator:app --reload
+COPY . /app
 
 # Command to run the FastAPI application
-WORKDIR /app 
+WORKDIR /app
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
 
 EXPOSE 8080
-
