--- a/service/docker-compose.yml
+++ b/service/docker-compose.yml
@@ -10,14 +10,14 @@ services:
     volumes:
       - "training_data:/dossier_host"
 
-#  model_runner:
-#    build:
-#      context: ./service_model_creation
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8081:8081"
-#    volumes:
-#      - "training_data:/app/data"
+  model_runner:
+    build:
+      context: service_ai_analysis/Dockerfile
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8081"
+    volumes:
+      - "training_data:/app/data"
 
 volumes:
   training_data:
