changed service to services

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ open_source_java_projects/**
 
 **/__pycache__
 /logdensitytool/node_modules/
-service/training_data/*
+services/training_data/*
 
 # Ignore .idea
 .idea/
