--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -12,12 +12,12 @@ services:
 
   model_runner:
     build:
-      context: service_ai_analysis/Dockerfile
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: service_ai_analysis/Dockerfile
     ports:
       - "8081:8081"
     volumes:
-      - "training_data:/app/data"
+      - "training_data:/dossier_host"
 
 volumes:
   training_data:
