Added log density to vs code extension

--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -16,8 +16,21 @@
       {
         "command": "extension.sendGitHubUrl",
         "title": "Send GitHub URL"
+      },
+      {
+        "command": "extension.analyzeLogDensity",
+        "title": "Analyze Log Density"
       }
-    ]
+    ],
+    "menus": {
+      "editor/context":[
+        {
+          "when": "resourceLangId == java",
+          "command": "extension.analyzeLogDensity",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "lint": "eslint .",
