Cannot analyze all project, alternative use case wip

--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -44,7 +44,11 @@
       "pfeExtension": [
         {
           "id": "javaFilesView",
-          "name": "[DEV] Density Analysis Preview"
+          "name": "Density Analysis Preview"
+        },
+        {
+          "id": "openTabsPreview",
+          "name": "Open Tabs Density Preview"
         }
       ]
     }
