--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -20,6 +20,10 @@
       {
         "command": "extension.analyzeLogDensity",
         "title": "Analyze Log Density"
+      },
+      {
+        "command": "extension.refreshOpenTabs",
+        "title": "Refresh Open Tabs"
       }
     ],
     "menus": {
