Default value for when there are no tabs

--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -52,7 +52,7 @@
         },
         {
           "id": "openTabsPreview",
-          "name": "Open Tabs Density Preview"
+          "name": "Density of Opened Tabs"
         }
       ]
     }
