Removed redundant event

--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -51,7 +51,7 @@
           "name": "Density Analysis Preview"
         },
         {
-          "id": "openTabsPreview",
+          "id": "openTabsSidebarView",
           "name": "Density of Opened Tabs"
         }
       ]
