--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -24,6 +24,14 @@
       {
         "command": "extension.refreshOpenTabs",
         "title": "Refresh Open Tabs"
+      },
+      {
+        "command": "extension.predictOpenTabs",
+        "title": "Predict Open Tabs",
+        "icon": {
+          "light": "media/refresh.svg",
+          "dark": "media/refresh-light.svg"
+        }
       }
     ],
     "menus": {
@@ -31,6 +39,13 @@
         {
           "when": "resourceLangId == java",
           "command": "extension.analyzeLogDensity",
+          "group": "navigation"
+        }
+      ],
+      "view/title": [
+        {
+          "command": "extension.predictOpenTabs",
+          "when": "view == openTabsSidebarView",
           "group": "navigation"
         }
       ]
