--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
       - '**.md'
 
 jobs:
- build-and-push:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,10 +24,34 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker image
+   
+    - name: Build and Push Docker image for service_ai_analysis
       uses: docker/build-push-action@v2
       with:
-        context: .
-        file: ./Dockerfile
+        context: ./services/service_ai_analysis
+        file: ./services/service_ai_analysis/Dockerfile
         push: true
-        tags: youssefroulamellah/pfe:latest
+        tags: youssefroulamellah/service_ai_analysis:latest
+
+
+    - name: Build and Push Docker image for service_model_creation
+      uses: docker/build-push-action@v2
+      with:
+        context: ./services/service_model_creation
+        file: ./services/service_model_creation/Dockerfile
+        push: true
+        tags: youssefroulamellah/service_model_creation:latest
+
+
+    - name: Run tests for service_ai_analysis
+      run: |
+        cd services/service_ai_analysis
+        poetry install
+        poetry run pytest
+
+
+    - name: Run tests for service_model_creation
+      run: |
+        cd services/service_model_creation
+        poetry install
+        poetry run pytest
