--- a/logdensitytool/package.json
+++ b/logdensitytool/package.json
@@ -46,7 +46,12 @@
       {
         "command": "analyzeFileProvider.sendForAnalysis",
         "title": "Send Selected Files for Analysis",
-        "icon": "media/icons/analyse.png"
+        "icon": "media/icons/send-files.png"
+      },
+      {
+        "command": "analyzeFileProvider.removeAllFiles",
+        "title": "Remove All Files",
+        "icon": "media/icons/remove.png"
       },
       {
         "command": "extension.predictOpenTabs",
@@ -69,6 +74,11 @@
         {
           "command": "analyzeFileProvider.sendForAnalysis",
           "when": "view == analyzeFilesView",
+          "group": "navigation"
+        },
+        {
+          "when": "view == analyzeFilesView",
+          "command": "analyzeFileProvider.removeAllFiles",
           "group": "navigation"
         }
       ],
