--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build and Push Docker image for service_ai_analysis
       uses: docker/build-push-action@v2
       with:
-        context: ./services/service_ai_analysis
+        context: ./services
         file: ./services/service_ai_analysis/Dockerfile
         push: true
         tags: youssefroulamellah/service_ai_analysis:latest
