--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - cicd_test
     paths-ignore:
       - '**.md'
 
@@ -24,7 +24,24 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # Build and push Docker image for service_ai_analysis
+    # SERVICE AI ANALYSIS
+
+    # Build Docker image for service_ai_analysis
+    - name: Build and Push Docker image for service_ai_analysis
+      uses: docker/build-push-action@v2
+      with:
+        context: ./services
+        file: ./services/service_ai_analysis/Dockerfile
+        push: false
+        load: true
+        tags: yroulamellah/log-density-tool:latest_ai_analysis
+
+    # Run the built Docker image tests
+    - name: Run Tests for service_ai_analysis in Docker container
+      run: |
+        docker run yroulamellah/log-density-tool:latest_ai_analysis pytest
+
+    # Push Docker image for service_ai_analysis
     - name: Build and Push Docker image for service_ai_analysis
       uses: docker/build-push-action@v2
       with:
@@ -33,21 +50,28 @@ jobs:
         push: true
         tags: yroulamellah/log-density-tool:latest_ai_analysis
 
-    # Run the built Docker image tests
-    - name: Run Tests for service_ai_analysis in Docker container
-      run: |
-        docker run yroulamellah/log-density-tool:latest_ai_analysis pytest
+    # SERVICE MODEL CREATION
 
-    # Build and push Docker image for service_model_creation
-    - name: Build and Push Docker image for service_model_creation
+    # Build Docker image for service_model_creation
+    - name: Build Docker image for service_model_creation
       uses: docker/build-push-action@v2
       with:
         context: ./services
         file: ./services/service_model_creation/Dockerfile
-        push: true
+        push: false
+        load: true
         tags: yroulamellah/log-density-tool:latest_model_creation
 
     # Run the built Docker image tests
     - name: Run Tests for service_model_creation in Docker container
       run: |
         docker run yroulamellah/log-density-tool:latest_model_creation pytest
+
+    # Push Docker image for service_ai_analysis
+    - name: Build and Push Docker image for latest_model_creation
+      uses: docker/build-push-action@v2
+      with:
+        context: ./services
+        file: ./services/latest_model_creation/Dockerfile
+        push: true
+        tags: yroulamellah/log-density-tool:latest_model_creation
